# Bora

./: .gitignore  LICENSE  README.md  __init__.py  context.py  paths.py  pyproject.toml  templates.py  ticket.py
.github/workflows/: publish.yml
bora/: __init__.py  cli.py  create.py  lint.py  skill.py  status.py
